--- a/Style/style.css
+++ b/Style/style.css
@@ -115,7 +115,7 @@ html{
     font-weight: bold;
 }
 .service{
-    background-image: url(../Images/plans.jpg);
+    background-image: url(../images/plans.jpg);
     width: 100%;
     height: auto;
     background-size: cover;
